Revision history for Perl module Mojo::Graphite::Writer

0.06
  - Fork safety (borrowed from Mojo::Pg)

0.05 2020-03-26
  - Fixed typo in documentation

0.04 2019-04-04
  - Made test more robust

0.03 2019-04-03
  - Fix bug that prevented multiple writes
  - Added some basic tests

0.02 2019-04-01
  - Fix bug blocking writes

0.01 2019-04-01
  - Initial release